Th wikidatatype filters do not need regex capabilities.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -386,27 +386,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj 'node2;wikidatatype'",
     " -i $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
-    " -p ';; ^commonsMedia$' -o $WIKIDATA_PARTS/part.commonsMedia.$SORTED_EXTENSION",
-    " -p ';; ^external-id$' -o $WIKIDATA_PARTS/part.external-id.$SORTED_EXTENSION",
-    " -p ';; ^geo-shape$' -o $WIKIDATA_PARTS/part.geo-shape.$SORTED_EXTENSION",
-    " -p ';; ^globe-coordinate$' -o $WIKIDATA_PARTS/part.globe-coordinate.$SORTED_EXTENSION",
-    " -p ';; ^math$' -o $WIKIDATA_PARTS/part.math.$SORTED_EXTENSION",
-    " -p ';; ^monolingualtext$' -o $WIKIDATA_PARTS/part.monolingualtext.$SORTED_EXTENSION",
-    " -p ';; ^musical-notation$' -o $WIKIDATA_PARTS/part.musical-notation.$SORTED_EXTENSION",
-    " -p ';; ^quantity$' -o $WIKIDATA_PARTS/part.quantity.$SORTED_EXTENSION",
-    " -p ';; ^string$' -o $WIKIDATA_PARTS/part.string.$SORTED_EXTENSION",
-    " -p ';; ^tabular-data$' -o $WIKIDATA_PARTS/part.tabular-data.$SORTED_EXTENSION",
-    " -p ';; ^time$' -o $WIKIDATA_PARTS/part.time.$SORTED_EXTENSION",
-    " -p ';; ^url$' -o $WIKIDATA_PARTS/part.url.$SORTED_EXTENSION",
-    " -p ';; ^wikibase-form$' -o $WIKIDATA_PARTS/part.wikibase-form.$SORTED_EXTENSION",
-    " -p ';; ^wikibase-item$' -o $WIKIDATA_PARTS/part.wikibase-item.$SORTED_EXTENSION",
-    " -p ';; ^wikibase-lexeme$' -o $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION",
-    " -p ';; ^wikibase-property$' -o $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION",
-    " -p ';; ^wikibase-sense$' -o $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION"
+    " -p ';; commonsMedia' -o $WIKIDATA_PARTS/part.commonsMedia.$SORTED_EXTENSION",
+    " -p ';; external-id' -o $WIKIDATA_PARTS/part.external-id.$SORTED_EXTENSION",
+    " -p ';; geo-shape' -o $WIKIDATA_PARTS/part.geo-shape.$SORTED_EXTENSION",
+    " -p ';; globe-coordinate' -o $WIKIDATA_PARTS/part.globe-coordinate.$SORTED_EXTENSION",
+    " -p ';; math' -o $WIKIDATA_PARTS/part.math.$SORTED_EXTENSION",
+    " -p ';; monolingualtext' -o $WIKIDATA_PARTS/part.monolingualtext.$SORTED_EXTENSION",
+    " -p ';; musical-notation' -o $WIKIDATA_PARTS/part.musical-notation.$SORTED_EXTENSION",
+    " -p ';; quantity' -o $WIKIDATA_PARTS/part.quantity.$SORTED_EXTENSION",
+    " -p ';; string' -o $WIKIDATA_PARTS/part.string.$SORTED_EXTENSION",
+    " -p ';; tabular-data' -o $WIKIDATA_PARTS/part.tabular-data.$SORTED_EXTENSION",
+    " -p ';; time' -o $WIKIDATA_PARTS/part.time.$SORTED_EXTENSION",
+    " -p ';; url' -o $WIKIDATA_PARTS/part.url.$SORTED_EXTENSION",
+    " -p ';; wikibase-form' -o $WIKIDATA_PARTS/part.wikibase-form.$SORTED_EXTENSION",
+    " -p ';; wikibase-item' -o $WIKIDATA_PARTS/part.wikibase-item.$SORTED_EXTENSION",
+    " -p ';; wikibase-lexeme' -o $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION",
+    " -p ';; wikibase-property' -o $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION",
+    " -p ';; wikibase-sense' -o $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION"
    ]
   },
   {
@@ -775,27 +775,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk filter --verbose=$VERBOSE --regex",
+    "!$kgtk filter --verbose=$VERBOSE",
     " --use-mgzip $USE_MGZIP",
     " --obj 'node2;wikidatatype'",
     " -i $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
-    " -p ';; ^commonsMedia$' -o $TEMP/part.property.commonsMedia.$UNSORTED_EXTENSION",
-    " -p ';; ^external-id$' -o $TEMP/part.property.external-id.$UNSORTED_EXTENSION",
-    " -p ';; ^geo-shape$' -o $TEMP/part.property.geo-shape.$UNSORTED_EXTENSION",
-    " -p ';; ^globe-coordinate$' -o $TEMP/part.property.globe-coordinate.$UNSORTED_EXTENSION",
-    " -p ';; ^math$' -o $TEMP/part.property.math.$UNSORTED_EXTENSION",
-    " -p ';; ^monolingualtext$' -o $TEMP/part.property.monolingualtext.$UNSORTED_EXTENSION",
-    " -p ';; ^musical-notation$' -o $TEMP/part.property.musical-notation.$UNSORTED_EXTENSION",
-    " -p ';; ^quantity$' -o $TEMP/part.property.quantity.$UNSORTED_EXTENSION",
-    " -p ';; ^string$' -o $TEMP/part.property.string.$UNSORTED_EXTENSION",
-    " -p ';; ^tabular-data$' -o $TEMP/part.property.tabular-data.$UNSORTED_EXTENSION",
-    " -p ';; ^time$' -o $TEMP/part.property.time.$UNSORTED_EXTENSION",
-    " -p ';; ^url$' -o $TEMP/part.property.url.$UNSORTED_EXTENSION",
-    " -p ';; ^wikibase-form$' -o $TEMP/part.property.wikibase-form.$UNSORTED_EXTENSION",
-    " -p ';; ^wikibase-item$' -o $TEMP/part.property.wikibase-item.$UNSORTED_EXTENSION",
-    " -p ';; ^wikibase-lexeme$' -o $TEMP/part.property.wikibase-lexeme.$UNSORTED_EXTENSION",
-    " -p ';; ^wikibase-property$' -o $TEMP/part.property.wikibase-property.$UNSORTED_EXTENSION",
-    " -p ';; ^wikibase-sense$' -o $TEMP/part.property.wikibase-sense.$UNSORTED_EXTENSION"
+    " -p ';; commonsMedia' -o $TEMP/part.property.commonsMedia.$UNSORTED_EXTENSION",
+    " -p ';; external-id' -o $TEMP/part.property.external-id.$UNSORTED_EXTENSION",
+    " -p ';; geo-shape' -o $TEMP/part.property.geo-shape.$UNSORTED_EXTENSION",
+    " -p ';; globe-coordinate' -o $TEMP/part.property.globe-coordinate.$UNSORTED_EXTENSION",
+    " -p ';; math' -o $TEMP/part.property.math.$UNSORTED_EXTENSION",
+    " -p ';; monolingualtext' -o $TEMP/part.property.monolingualtext.$UNSORTED_EXTENSION",
+    " -p ';; musical-notation' -o $TEMP/part.property.musical-notation.$UNSORTED_EXTENSION",
+    " -p ';; quantity' -o $TEMP/part.property.quantity.$UNSORTED_EXTENSION",
+    " -p ';; string' -o $TEMP/part.property.string.$UNSORTED_EXTENSION",
+    " -p ';; tabular-data' -o $TEMP/part.property.tabular-data.$UNSORTED_EXTENSION",
+    " -p ';; time' -o $TEMP/part.property.time.$UNSORTED_EXTENSION",
+    " -p ';; url' -o $TEMP/part.property.url.$UNSORTED_EXTENSION",
+    " -p ';; wikibase-form' -o $TEMP/part.property.wikibase-form.$UNSORTED_EXTENSION",
+    " -p ';; wikibase-item' -o $TEMP/part.property.wikibase-item.$UNSORTED_EXTENSION",
+    " -p ';; wikibase-lexeme' -o $TEMP/part.property.wikibase-lexeme.$UNSORTED_EXTENSION",
+    " -p ';; wikibase-property' -o $TEMP/part.property.wikibase-property.$UNSORTED_EXTENSION",
+    " -p ';; wikibase-sense' -o $TEMP/part.property.wikibase-sense.$UNSORTED_EXTENSION"
    ]
   },
   {
