--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -667,7 +667,7 @@
     "print(f_list)\n",
     "kgtk_cat_command = 'kgtk cat -i {} -o $temp/all_labels_aliases_descriptions_duplicates.tsv'.format(f_list)\n",
     "\n",
-    "!kgtk_cat_command"
+    "!$kgtk_cat_command"
    ]
   },
   {
