sort first and then compact

--- a/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
+++ b/examples/Example-9-Find-Labels-Aliases-and-Descriptions-for-a-KGTK-edge-file.ipynb
@@ -674,7 +674,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 11: add ids"
+    "### Step 11: sort and compact "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kgtk sort2 -i $temp/all_labels_aliases_descriptions_duplicates.tsv \\\n",
+    "    -o $temp/all_labels_aliases_descriptions_sorted.tsv\n",
+    "\n",
+    "!kgtk compact -i $temp/all_labels_aliases_descriptions_sorted.tsv \\\n",
+    "    -o $temp/all_labels_aliases_descriptions_sorted_dedup.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 12: add ids"
    ]
   },
   {
@@ -683,27 +703,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kgtk add-id -i $temp/all_labels_aliases_descriptions_duplicates.tsv \\\n",
-    "    -o $temp/all_labels_aliases_descriptions_duplicates_ids.tsv \\\n",
-    "    --id-style node1-label-num"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Step 12: deduplicate and output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!kgtk compact -i $temp/all_labels_aliases_descriptions_duplicates_ids.tsv \\\n",
+    "!kgtk add-id -i $temp/all_labels_aliases_descriptions_sorted_dedup.tsv \\\n",
     "    -o $OUT/$OUT_FILE \\\n",
-    "    --lists-in-input False"
+    "    --id-style node1-label-num"
    ]
   },
   {
