--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -180,7 +180,7 @@
     " -p '; ^label$ ;' -o $TEMP/part.label.$UNSORTED_EXTENSION",
     " -p '; ^(sitelink-badge|sitelink-language|sitelink-site|sitelink-title|wikipedia_sitelink)$ ;' -o $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
     " -p '; ^type$ ;' -o $TEMP/types.$UNSORTED_EXTENSION",
-    " -p '; ^.*-.*-.*-.*-.*$ ;' -o $TEMP/part.qual.$UNSORTED_EXTENSION",
+    " -p '^.*-.*-.*-.*-.*$ ;;' -o $TEMP/part.qual.$UNSORTED_EXTENSION",
     " --reject-file $TEMP/part.claims.$UNSORTED_EXTENSION"
    ]
   },
@@ -407,7 +407,8 @@
     " -p ';; wikibase-item' -o $WIKIDATA_PARTS/part.wikibase-item.$SORTED_EXTENSION",
     " -p ';; wikibase-lexeme' -o $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION",
     " -p ';; wikibase-property' -o $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION",
-    " -p ';; wikibase-sense' -o $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION"
+    " -p ';; wikibase-sense' -o $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION",
+    " -r $WIKIDATA_PARTS/part.other.$SORTED_EXTENSION"
    ]
   },
   {
@@ -742,7 +743,8 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+
+"metadata": {},
    "outputs": [],
    "source": [
     "!$kgtk unique --verbose=$VERBOSE",
@@ -767,325 +769,6 @@
     " --output-file $WIKIDATA_PARTS/part.property.counts-with-labels.$SORTED_EXTENSION", 
     " --columns-to-lift node1",
     " --prefilter-labels",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk filter --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --first-match-only",
-    " --obj 'node2;wikidatatype'",
-    " -i $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION",
-    " -p ';; commonsMedia' -o $TEMP/part.property.commonsMedia.$UNSORTED_EXTENSION",
-    " -p ';; external-id' -o $TEMP/part.property.external-id.$UNSORTED_EXTENSION",
-    " -p ';; geo-shape' -o $TEMP/part.property.geo-shape.$UNSORTED_EXTENSION",
-    " -p ';; globe-coordinate' -o $TEMP/part.property.globe-coordinate.$UNSORTED_EXTENSION",
-    " -p ';; math' -o $TEMP/part.property.math.$UNSORTED_EXTENSION",
-    " -p ';; monolingualtext' -o $TEMP/part.property.monolingualtext.$UNSORTED_EXTENSION",
-    " -p ';; musical-notation' -o $TEMP/part.property.musical-notation.$UNSORTED_EXTENSION",
-    " -p ';; quantity' -o $TEMP/part.property.quantity.$UNSORTED_EXTENSION",
-    " -p ';; string' -o $TEMP/part.property.string.$UNSORTED_EXTENSION",
-    " -p ';; tabular-data' -o $TEMP/part.property.tabular-data.$UNSORTED_EXTENSION",
-    " -p ';; time' -o $TEMP/part.property.time.$UNSORTED_EXTENSION",
-    " -p ';; url' -o $TEMP/part.property.url.$UNSORTED_EXTENSION",
-    " -p ';; wikibase-form' -o $TEMP/part.property.wikibase-form.$UNSORTED_EXTENSION",
-    " -p ';; wikibase-item' -o $TEMP/part.property.wikibase-item.$UNSORTED_EXTENSION",
-    " -p ';; wikibase-lexeme' -o $TEMP/part.property.wikibase-lexeme.$UNSORTED_EXTENSION",
-    " -p ';; wikibase-property' -o $TEMP/part.property.wikibase-property.$UNSORTED_EXTENSION",
-    " -p ';; wikibase-sense' -o $TEMP/part.property.wikibase-sense.$UNSORTED_EXTENSION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.commonsMedia.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.commonsMedia.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.external-id.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.external-id.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.geo-shape.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.geo-shape.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.globe-coordinate.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.globe-coordinate.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.math.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.math.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.monolingualtext.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.monolingualtext.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.musical-notation.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.musical-notation.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.quantity.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.quantity.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.string.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.string.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.tabular-data.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.tabular-data.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.time.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.time.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.url.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.url.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-form.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.wikibase-form.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-item.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.wikibase-item.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-lexeme.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.wikibase-lexeme.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-property.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.wikibase-property.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE",
-    " --use-mgzip $USE_MGZIP",
-    " --input-file  $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION",
-    " --filter-on   $WIKIDATA_PARTS/part.property.wikibase-sense.$SORTED_EXTENSION",
-    " --output-file $WIKIDATA_PARTS/part.property.wikibase-sense.qual.$SORTED_EXTENSION", 
-    " --input-keys node1",
-    " --filter-keys id",
-    " --presorted",
     ""
    ]
   }
