--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -408,7 +408,7 @@
     " -p ';; wikibase-lexeme' -o $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION",
     " -p ';; wikibase-property' -o $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION",
     " -p ';; wikibase-sense' -o $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION",
-    " -r $WIKIDATA_PARTS/part.other.$SORTED_EXTENSION"
+    " --reject-file $WIKIDATA_PARTS/part.other.$SORTED_EXTENSION"
    ]
   },
   {
