Filter out another sitelink edge.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -178,7 +178,7 @@
     " -p '; ^alias$ ;' -o $TEMP/part.alias.$UNSORTED_EXTENSION",
     " -p '; ^description$ ;' -o $TEMP/part.description.$UNSORTED_EXTENSION",
     " -p '; ^label$ ;' -o $TEMP/part.label.$UNSORTED_EXTENSION",
-    " -p '; ^(sitelink-badge|sitelink-language|sitelink-site|sitelink-title|wikipedia_sitelink)$ ;' -o $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
+    " -p '; ^(addl_wikipedia_sitelink|sitelink-badge|sitelink-language|sitelink-site|sitelink-title|wikipedia_sitelink)$ ;' -o $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
     " -p '; ^type$ ;' -o $TEMP/types.$UNSORTED_EXTENSION",
     " -p '^.*-.*-.*-.*-.*$ ;;' -o $TEMP/part.qual.$UNSORTED_EXTENSION",
     " --reject-file $TEMP/part.claims.$UNSORTED_EXTENSION"
