Be explicit about the sorting order.

--- a/examples/partition-wikidata-language-regex.ipynb
+++ b/examples/partition-wikidata-language-regex.ipynb
@@ -193,6 +193,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/property.datatype.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/property.datatype.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --gzip-command $gzip",
     " --extra \"$SORT_EXTRAS\"",
     ""
@@ -207,6 +208,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.alias.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --gzip-command $gzip",
     " --extra \"$SORT_EXTRAS\"",
     ""
@@ -233,6 +235,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.description.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --gzip-command $gzip",
     " --extra \"$SORT_EXTRAS\"",
     ""
@@ -259,6 +262,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.label.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --gzip-command $gzip",
     " --extra \"$SORT_EXTRAS\"",
     ""
@@ -285,6 +289,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE",
     " -i $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --gzip-command $gzip",
     " --extra \"$SORT_EXTRAS\"",
     ""
@@ -311,6 +316,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE --gzip-command=$gzip",
     " -i $TEMP/types.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/types.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --extra \"$SORT_EXTRAS\"",
     ""
    ]
@@ -324,6 +330,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE --gzip-command=$gzip",
     " -i $TEMP/part.qual.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --extra \"$SORT_EXTRAS\"",
     ""
    ]
@@ -337,6 +344,7 @@
     "!$kgtk sort2 --verbose=$VERBOSE --gzip-command=$gzip",
     " -i $TEMP/part.claims.$UNSORTED_EXTENSION",
     " -o $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION",
+    " --columns id node1 label node2",
     " --extra \"$SORT_EXTRAS\"",
     ""
    ]
