--- a/examples/partition-wikidata-language-regex.ipynb
+++ b/examples/partition-wikidata-language-regex.ipynb
@@ -14,7 +14,56 @@
     "papermill partition-wikidata.ipynb partition-wikidata.out.ipynb \\\n",
     "-p wikidata_input_path /data4/rogers/elicit/cache/datasets/wikidata-20200803/data/everything.tsv.gz \\\n",
     "-p wikidata_parts_path /data4/rogers/elicit/cache/datasets/wikidata-20200803/parts \\\n",
-    "```"
+    "```\n",
+    "\n",
+    "Here is a sample of the records that might appear in the input KGTK file:\n",
+    "```\n",
+    "id\tnode1\tlabel\tnode2\trank\tnode2;wikidatatype\tlang\n",
+    "Q1-P1036-418bc4-78f5a565-0\tQ1\tP1036\t\"113\"\tnormal\texternal-id\t\n",
+    "Q1-P1343-Q19190511-ab132b87-0   Q1      P1343   Q19190511       normal  wikibase-item   \n",
+    "Q1-P18-92a7b3-0dcac501-0        Q1      P18     \"Hubble ultra deep field.jpg\"   normal  commonsMedia    \n",
+    "Q1-P2386-cedfb0-0fdbd641-0      Q1      P2386   +880000000000000000000000Q828224        normal  quantity        \n",
+    "Q1-P580-a2fccf-63cf4743-0       Q1      P580    ^-13798000000-00-00T00:00:00Z/3 normal  time    \n",
+    "Q1-P920-47c0f2-52689c4e-0       Q1      P920    \"LEM201201756\"  normal  string  \n",
+    "Q1-P1343-Q19190511-ab132b87-0-P805-Q84065667-0  Q1-P1343-Q19190511-ab132b87-0   P805    Q84065667               wikibase-item   \n",
+    "Q1-P1343-Q88672152-5080b9e2-0-P304-5724c3-0     Q1-P1343-Q88672152-5080b9e2-0   P304    \"13-36\"         string  \n",
+    "Q1-P2670-Q18343-030eb87e-0-P1107-ce87f8-0       Q1-P2670-Q18343-030eb87e-0      P1107   +0.70           quantity        \n",
+    "Q1-P793-Q273508-1900d69c-0-P585-a2fccf-0        Q1-P793-Q273508-1900d69c-0      P585    ^-13798000000-00-00T00:00:00Z/3         time    \n",
+    "P10-alias-en-282226-0   P10     alias   'gif'@en\n",
+    "P10-description-en      P10     description     'relevant video. For images, use the property P18. For film trailers, qualify with \\\"object has role\\\" (P3831)=\\\"trailer\\\" (Q622550)'@en                        en\n",
+    "P10-label-en    P10     label   'video'@en                      en\n",
+    "Q1-addl_wikipedia_sitelink-19e42a-0     Q1      addl_wikipedia_sitelink http://enwikiquote.org/wiki/Universe                    en\n",
+    "Q1-addl_wikipedia_sitelink-19e42a-0-language-0  Q1-addl_wikipedia_sitelink-19e42a-0     sitelink-language       en                      en\n",
+    "Q1-addl_wikipedia_sitelink-19e42a-0-site-0      Q1-addl_wikipedia_sitelink-19e42a-0     sitelink-site   enwikiquote                     en\n",
+    "Q1-addl_wikipedia_sitelink-19e42a-0-title-0     Q1-addl_wikipedia_sitelink-19e42a-0     sitelink-title  \"Universe\"                      en\n",
+    "Q1-wikipedia_sitelink-5e459a-0  Q1      wikipedia_sitelink      http://en.wikipedia.org/wiki/Universe                   en\n",
+    "Q1-wikipedia_sitelink-5e459a-0-badge-Q17437798  Q1-wikipedia_sitelink-5e459a-0  sitelink-badge  Q17437798                       en\n",
+    "Q1-wikipedia_sitelink-5e459a-0-language-0       Q1-wikipedia_sitelink-5e459a-0  sitelink-language       en                      en\n",
+    "Q1-wikipedia_sitelink-5e459a-0-site-0   Q1-wikipedia_sitelink-5e459a-0  sitelink-site   enwiki                  en\n",
+    "Q1-wikipedia_sitelink-5e459a-0-title-0  Q1-wikipedia_sitelink-5e459a-0  sitelink-title  \"Universe\"                      en\n",
+    "```\n",
+    "Here are some contraints on the contents of the input file:\n",
+    "- The input file starts with a KGTK header record.\n",
+    "  - In addition to the `id`, `node1`, `label`, and `node2` columns, the file is expected contain `rank`, `node2;wikidatatype`, and `lang` columns.\n",
+    "  - The `rank` column is not used in this script.\n",
+    "  - The `node2;wikidatatype` column is used to partion claims by Wikidata property datatype.\n",
+    "  - The `lang` column is used to extract English language sitelinks.\n",
+    "- The `id` column must contain a nonempty value.\n",
+    "  - It must follow certain patterns for claim and qualifier records.\n",
+    "    - Claim records contain 5 sections separated by hyphens (4 hyphens total).\n",
+    "    - Qualifier records contain 8 sections separated by dashes (7 dashes total).\n",
+    "- The first section of an `id` value must be the `node` value for the record.\n",
+    "  - The qualifier extraction operations depend upon this constraint. \n",
+    "- In addition to the claims and qualifiers, the input file is expected to contain:\n",
+    "  - English language labels for all property entities appearing in the file.\n",
+    "- The input file ought to contain the following:\n",
+    "  - alias records in appropriate languages,\n",
+    "  - description records in appropriate languages,\n",
+    "  - label records in appropriate languages, and\n",
+    "  - sitelink records in appropriate languages.\n",
+    "- Additionally, this script provides for the appearance of `datatype` and `type` records.\n",
+    "  - `datatype` records map Wikidata property entities to Wikidata property datatypes. These records may provide an alternative to the `node2;wikidatatype` column in the future.\n",
+    "  - `type` records list all `entityId` values and identify them as properties or items. These records provides a correctness check on the operation of `kgtk import-wikidata`, and may be deprecated in the future. "
    ]
   },
   {
