Do not end in a backslash.

--- a/examples/partition-wikidata-language-regex.ipynb
+++ b/examples/partition-wikidata-language-regex.ipynb
@@ -233,7 +233,7 @@
     " --input-file  $TEMP/property.datatype.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/property.datatype.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -246,7 +246,7 @@
     " --input-file  $TEMP/part.alias.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -259,7 +259,7 @@
     " --input-file  $TEMP/part.description.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -272,7 +272,7 @@
     " --input-file  $TEMP/part.label.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -285,7 +285,7 @@
     " --input-file  $TEMP/part.wikipedia_sitelink.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -298,7 +298,7 @@
     " --input-file  $TEMP/types.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/types.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -311,7 +311,7 @@
     " --input-file  $TEMP/part.qual.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -324,7 +324,7 @@
     " --input-file  $TEMP/part.claims.$UNSORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION \\\n",
     " --columns     id node1 label node2 \\\n",
-    " --extra       \"$SORT_EXTRAS\" \\\n"
+    " --extra       \"$SORT_EXTRAS\""
    ]
   },
   {
@@ -345,7 +345,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION \\\n"
+    " -p ';; @en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION \\\n"
+    " -p ';; @en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION \\\n"
+    " -p ';; @en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --obj=lang \\\n",
     " --input-file $WIKIDATA_PARTS/part.wikipedia_sitelink.$SORTED_EXTENSION \\\n",
-    " -p ';; en' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION \\\n"
+    " -p ';; en' -o $WIKIDATA_PARTS/part.wikipedia_sitelink.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -398,7 +398,7 @@
     "!$kgtk unique --verbose=$VERBOSE --format=node-only --use-mgzip=$USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.claims.entities.$SORTED_EXTENSION \\\n",
-    " --column      node1 \\\n"
+    " --column      node1"
    ]
   },
   {
@@ -417,7 +417,7 @@
     "!$kgtk unique --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.claims.datatypes.$SORTED_EXTENSION \\\n",
-    " --column      'node2;wikidatatype' \\\n"
+    " --column      'node2;wikidatatype'"
    ]
   },
   {
@@ -478,7 +478,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.commonsMedia.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.commonsMedia.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -492,7 +492,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.external-id.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.external-id.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -506,7 +506,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.geo-shape.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.geo-shape.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -520,7 +520,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.globe-coordinate.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.globe-coordinate.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -534,7 +534,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.math.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.math.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -548,7 +548,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.monolingualtext.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.monolingualtext.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -562,7 +562,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.musical-notation.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.musical-notation.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -576,7 +576,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.quantity.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.quantity.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -590,7 +590,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.string.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.string.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -604,7 +604,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.tabular-data.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.tabular-data.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -618,7 +618,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.time.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.time.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -632,7 +632,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.url.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.url.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -646,7 +646,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-form.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikibase-form.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -655,13 +655,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!$kgtk ifexists --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
+    "!$kgtk ifexists --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --presorted \\\n",
     " --input-file  $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION \\\n",
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-item.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikibase-item.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n",
-    " --presorted \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -675,7 +674,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-lexeme.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikibase-lexeme.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -689,7 +688,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-property.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikibase-property.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -703,7 +702,7 @@
     " --filter-on   $WIKIDATA_PARTS/part.wikibase-sense.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.wikibase-sense.qual.$SORTED_EXTENSION \\\n",
     " --input-keys  node1 \\\n",
-    " --filter-keys id \\\n"
+    " --filter-keys id"
    ]
   },
   {
@@ -722,7 +721,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION \\\n",
-    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION \\\n"
+    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION"
    ]
   },
   {
@@ -733,7 +732,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION \\\n",
-    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION \\\n"
+    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION"
    ]
   },
   {
@@ -752,7 +751,7 @@
     "!$kgtk unique --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.property.datatypes.$SORTED_EXTENSION \\\n",
-    " --column      'node2;wikidatatype' \\\n"
+    " --column      'node2;wikidatatype'"
    ]
   },
   {
@@ -774,7 +773,7 @@
     " --input-file  $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION \\\n",
     " --output-file $WIKIDATA_PARTS/part.property.counts.$SORTED_EXTENSION \\\n",
     " --column      label \\\n",
-    " --label       total-count \\\n"
+    " --label       total-count"
    ]
   },
   {
@@ -788,7 +787,7 @@
     " --input-file       $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION \\\n",
     " --output-file      $WIKIDATA_PARTS/part.property.counts-with-labels.$SORTED_EXTENSION \\\n",
     " --columns-to-lift  node1 \\\n",
-    " --prefilter-labels \\\n"
+    " --prefilter-labels"
    ]
   }
  ],
