Patterns must match the entire field.

--- a/examples/partition-wikidata-language-regex.ipynb
+++ b/examples/partition-wikidata-language-regex.ipynb
@@ -345,7 +345,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.alias.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION"
+    " -p ';; ^.*@en$' -o $WIKIDATA_PARTS/part.alias.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -356,7 +356,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.description.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION"
+    " -p ';; ^.*@en$' -o $WIKIDATA_PARTS/part.description.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.label.$SORTED_EXTENSION \\\n",
-    " -p ';; @en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION"
+    " -p ';; ^.*@en$' -o $WIKIDATA_PARTS/part.label.en.$SORTED_EXTENSION"
    ]
   },
   {
@@ -721,7 +721,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.claims.$SORTED_EXTENSION \\\n",
-    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION"
+    " -p '^P.*$ ;;' -o $WIKIDATA_PARTS/part.property.$SORTED_EXTENSION"
    ]
   },
   {
@@ -732,7 +732,7 @@
    "source": [
     "!$kgtk filter --verbose=$VERBOSE --use-mgzip=$USE_MGZIP --regex \\\n",
     " --input-file $WIKIDATA_PARTS/part.qual.$SORTED_EXTENSION \\\n",
-    " -p '^P ;;' -o $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION"
+    " -p '^P.*$ ;;' -o $WIKIDATA_PARTS/part.property.qual.$SORTED_EXTENSION"
    ]
   },
   {
