Extract some useful counts.

--- a/examples/partition-wikidata.ipynb
+++ b/examples/partition-wikidata.ipynb
@@ -193,7 +193,9 @@
    "metadata": {},
    "source": [
     "### Partition the Claims, Qualifiers, and Entity Data\n",
-    "Split out the entity data (alias, description, label, and sitelinks) and additional metadata (datatype, type).  Separate the qualifiers from the claims."
+    "Split out the entity data (alias, description, label, and sitelinks) and additional metadata (datatype, type).  Separate the qualifiers from the claims.\n",
+    "\n",
+    "Note: this code depends upon the ID values following the patterns used by `kgtk import-wikidata`."
    ]
   },
   {
@@ -385,34 +387,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract the Claim Entity list\n",
-    "Create `claims.node1.entity.counts`.  This is a KGTK edge file that contains a count of all the Wikidata `entityId` values in the `node1` column of the claim file, along with labels. Wikidata items have `entityId` values that start with `Q`, while Wikidata properties have `entityId` values that start with `P`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk unique --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
-    " --input-file  $WIKIDATA_PARTS/claims.$SORTED_EXTENSION \\\n",
-    " --column      node1 \\\n",
-    " --label node1-entity-count \\\n",
-    "/ lift --verbose=${VERBOSE} --use-mgzip=$USE_MGZIP \\\n",
-    " --label-file  $WIKIDATA_PARTS/labels.en.$SORTED_EXTENSION \\\n",
-    " --output-file $WIKIDATA_PARTS/claims.node1.entity.counts.$SORTED_EXTENSION \\\n",
-    " --columns-to-lift node1 \\\n",
-    " --input-file-is-presorted \\\n",
-    " --label-file-is-presorted"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extract the Claim Entity list\n",
-    "Create `claims.node1.entity.counts`.  This is a KGTK edge file that contains a count of all the Wikidata `entityId` values in the `node1` column of the claim file, along with English language labels. Wikidata items have `entityId` values that start with `Q`, while Wikidata properties have `entityId` values that start with `P`."
+    "### Extract the Claims Entity list\n",
+    "Create `claims.node1.entity.counts`.  This is a KGTK edge file that contains a count of all the Wikidata `entityId` values in the `node1` column of the claim file, along with the matching English language labels. Wikidata items have `entityId` values that start with `Q`, while Wikidata properties have `entityId` values that start with `P`."
    ]
   },
   {
@@ -843,25 +819,15 @@
     "!$kgtk unique --verbose=$VERBOSE \\\n",
     " --use-mgzip $USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/claims.node1.property.rows.$SORTED_EXTENSION \\\n",
-    " --output-file $WIKIDATA_PARTS/claims.node1.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
     " --column      label \\\n",
-    " --label       node1-property-count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
-    " --input-file       $WIKIDATA_PARTS/claims.node1.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
+    " --label       node1-property-count \\\n",
+    "/ lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
     " --label-file       $WIKIDATA_PARTS/labels.en.$SORTED_EXTENSION \\\n",
     " --output-file      $WIKIDATA_PARTS/claims.node1.property.counts.$SORTED_EXTENSION \\\n",
     " --columns-to-lift  node1 \\\n",
     " --input-file-is-presorted --label-file-is-presorted"
    ]
-  }
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -915,25 +881,15 @@
     "!$kgtk unique --verbose=$VERBOSE \\\n",
     " --use-mgzip $USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/claims.label.property.rows.$SORTED_EXTENSION \\\n",
-    " --output-file $WIKIDATA_PARTS/claims.label.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
     " --column      label \\\n",
-    " --label       label-property-count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
-    " --input-file       $WIKIDATA_PARTS/claims.label.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
+    " --label       label-property-count \\\n",
+    "/ lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
     " --label-file       $WIKIDATA_PARTS/labels.en.$SORTED_EXTENSION \\\n",
     " --output-file      $WIKIDATA_PARTS/claims.label.property.counts.$SORTED_EXTENSION \\\n",
     " --columns-to-lift  node1 \\\n",
     " --input-file-is-presorted --label-file-is-presorted"
    ]
-  }
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -987,19 +943,9 @@
     "!$kgtk unique --verbose=$VERBOSE \\\n",
     " --use-mgzip $USE_MGZIP \\\n",
     " --input-file  $WIKIDATA_PARTS/claims.node2.property.rows.$SORTED_EXTENSION \\\n",
-    " --output-file $WIKIDATA_PARTS/claims.node2.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
     " --column      label \\\n",
-    " --label       node2-property-count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!$kgtk lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
-    " --input-file       $WIKIDATA_PARTS/claims.node2.property.counts.unlabeled.$SORTED_EXTENSION \\\n",
+    " --label       node2-property-count \\\n",
+    "/ lift --verbose=$VERBOSE --use-mgzip=$USE_MGZIP \\\n",
     " --label-file       $WIKIDATA_PARTS/labels.en.$SORTED_EXTENSION \\\n",
     " --output-file      $WIKIDATA_PARTS/claims.node2.property.counts.$SORTED_EXTENSION \\\n",
     " --columns-to-lift  node1 \\\n",
